@@ -46,6 +46,7 @@
 * Vanco: Update `purchase` to complete a purchase transaction with an existing session id [BritneyS] #4461
 * Authorize.net: Allow custom verify_amount and validate it [jherreraa] #4464
 * Shift4: Add gateway adapter [ali-hassan] #4415
+* Rapyd: Correctly add `billing_address` [naashton] #4465
 
 == Version 1.126.0 (April 15th, 2022)
 * Moneris: Add 3DS MPI field support [esmitperez] #4373
